--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                   </div>
 
-                  <div class="col-lg-12">
-                    <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                  <div class="actions">
+                    <input type="submit" value="Send message" name="submit">
                   </div>
 
                 </div>
