--- a/index.html
+++ b/index.html
@@ -454,9 +454,11 @@
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                   </div>
 
-                  <div class="actions">
-                    <input type="submit" value="Send message" name="submit">
-                  </div>
+                  <p>
+                    <ul class="actions">
+                      <li><input type="submit" value="Send message" name="submit"></li>
+                    </ul>
+                  </p>
 
                 </div>
               </form>
