--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             </div>
 
             <div class="col-lg-6">
-              <form method="post" role="form" class="php-email-form" data-netlify="true">
+              <form name="contact" id="myform" method="post" role="form" class="php-email-form" data-netlify="true">
                 <div class="row">
 
                   <div class="col-lg-6">
@@ -448,20 +448,23 @@
                     </div>
                   </div>
 
+                  <!-- 
                   <div class="col-lg-12 mb-3">
                     <div class="loading">Loading</div>
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                   </div>
-
-                  <p>
-                    <ul class="actions">
-                      <li><input type="submit" value="Send message" name="submit"></li>
-                    </ul>
-                  </p>
+-->
+                  
 
                 </div>
               </form>
+              <p>
+                <ul class="actions">
+                  <li><input type="submit" value="Send message" name="submit" form="myform"></li>
+                </ul>
+              </p>
+
             </div>
           </div>
         </div>
