--- a/index.html
+++ b/index.html
@@ -455,15 +455,15 @@
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                   </div>
 -->
-                  
+                  <div>
+                    <ul class="actions">
+                      <li><input type="submit" value="Send message" name="submit" form="myform"></li>
+                    </ul>
+                  </div>
 
                 </div>
               </form>
-              <p>
-                <ul class="actions">
-                  <li><input type="submit" value="Send message" name="submit" form="myform"></li>
-                </ul>
-              </p>
+              
 
             </div>
           </div>
